# mod_mail

./: .buildpacks  Aptfile  Cargo.toml  Procfile  app.json
migrations/2018-10-10-155555_add_config_table/: down.sql  up.sql
src/: listener.rs  logging.rs  main.rs
src/database/: schema.rs
src/database/model/: config.rs
