[package]
name = "mod_mail"
version = "0.1.0"
authors = ["Kyle Clemens <git@kyleclemens.com>"]
edition = "2018"

[dependencies]
serenity = "0.5"
chrono = "0.4"
error-chain = "0.12"
parking_lot = "0.6"
r2d2 = "0.8"
r2d2-diesel = "1"
postgres = "0.15"
rand = "0.5"
dotenv = "0.13"
strsim = "0.8"

[dependencies.diesel]
version = "1.3"
features = ["postgres"]
