[package]
name = "mod_mail"
version = "0.1.0"
authors = ["Kyle Clemens <git@kyleclemens.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
dotenv = "0.14"
error-chain = "0.12"
log = "0.4"
parking_lot = "0.9"
postgres = "0.15"
r2d2 = "0.8"
r2d2-diesel = "1"
rand = "0.7"
serenity = "0.6"
strsim = "0.9"

[dependencies.diesel]
version = "1"
features = ["postgres"]
